fix layout issue and add links to social platforms

--- a/src/App.css
+++ b/src/App.css
@@ -568,6 +568,8 @@ input::placeholder {
 
 .svg-icon {
   font-size: 2.5rem !important;
+  cursor: pointer;
+  text-decoration: none;
 }
 
 .svg-icon:hover {
@@ -667,6 +669,11 @@ input::placeholder {
     grid-column: 1 / -1;
   }
 
+  .container,
+  .navbar {
+    width: 90%;
+  }
+
   .cover-container {
     grid-column: 1 / -1;
   }
@@ -688,7 +695,7 @@ input::placeholder {
   }
 }
 
-@media screen and (min-width: 1019px) and (max-width: 1484px) {
+@media screen and (min-width: 1246px) and (max-width: 1484px) {
   .navbar,
   .footer,
   .cover-page-container,
@@ -696,12 +703,19 @@ input::placeholder {
     grid-column: 1 / -1;
   }
 
+  .container {
+    width: 90%;
+  }
+  .navbar {
+    width: 90.5%;
+  }
+
   .cover-container {
     grid-column: 1 / -1;
   }
 
   .post-thumbnail-container {
-    width: 45%;
+    width: 30%;
   }
 
   .card-container {
@@ -718,6 +732,24 @@ input::placeholder {
     width: 100%;
     max-height: 20rem;
     object-fit: scale-down;
+  }
+}
+
+@media screen and (min-width: 1019px) and (max-width: 1245px) {
+  .footer,
+  .cover-page-container,
+  .card-container {
+    grid-column: 1 / -1;
+  }
+
+  .card-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  .post-thumbnail-container {
+    width: 45%;
   }
 }
 
